[package]
name = "bong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
bevy_egui = "0.21.0"
bevy_rapier2d = { version = "0.22.0", features = ["debug-render-2d", "enhanced-determinism"] }
# bevy_rapier2d = { git = "https://github.com/Aceeri/bevy_rapier.git", branch = "fixed-update", features = ["debug-render-2d", "enhanced-determinism"] }
bevy_renet = "0.0.9"
bincode = "1.3.3"
derive_more = "0.99.17"
renet_visualizer = { version = "0.0.6", features = ["bevy"] }
serde = "1.0.174"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
